atlassian/jira/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
spec:
  type: NodePort
  selector:
    app: jira
  ports:
    - name: http
      port: 8080
      targetPort: 8080
