atlassian/jira/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jira
spec:
  ingressClassName: traefik
  rules:
    - host: jira.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira
                port:
                  number: 8080
